--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
         "command": "${workspaceFolder}/tools/build-vs2019.bat",  
       },
       "osx": {
-        "command": "${workspaceFolder}/tools/build-macos.bat",
+        "command": "${workspaceFolder}/tools/build-macos.sh",
       },
       "options": {
         // "cwd": "${workspaceFolder}/"
