--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,26 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run Program",
-      "type": "cppvsdbg",
+      "name": "(Windows) Run Program",
       "request": "launch",
-      "windows": {  
+      "type": "cppvsdbg",
+      "windows": {
         "program": "${workspaceFolder}/BUILD/VS2019/Debug/CoronaRoyale.exe",
         "cwd": "${workspaceFolder}/BUILD/VS2019/Debug/",
       },
+      "args": [],
+      "stopAtEntry": false,
+      "environment": [],
+      "externalConsole": false,
+      "preLaunchTask": "Build"
+    },
+    {
+      "name": "(macOS) Run Program",
+      "request": "launch",
+      "type": "cppdbg",
       "osx": {
+        "miDebuggerPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/lldb-mi",
+        "MIMode": "lldb",
         "program": "${workspaceFolder}/BUILD/macos/CoronaRoyale",
         "cwd": "${workspaceFolder}/BUILD/macos/",
       },
