--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "args": [],
       "stopAtEntry": false,
       "environment": [],
-      "externalConsole": false,
+      "externalConsole": true,
       "preLaunchTask": "Build"
     },
     {
@@ -31,7 +31,7 @@
       "args": [],
       "stopAtEntry": false,
       "environment": [],
-      "externalConsole": false,
+      "externalConsole": true,
       "preLaunchTask": "Build"
     }
   ]
