Added player struct, box overlap check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(CoronaRoyale
   src/main.c
   src/events.c
   src/collision.c
+  src/player.c
 )
 target_compile_definitions(CoronaRoyale PRIVATE
 
