--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "files.associations": {
+    "*.cpp": "cpp",
     "sdl.h": "c",
     "stdio.h": "c",
     "sdl_main.h": "c",
     "sdl_stdinc.h": "c",
-    "sdl_messagebox.h": "c"
+    "sdl_messagebox.h": "c",
+    "collison.h": "c"
   }
 }
