--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
     "sdl_messagebox.h": "c",
     "collison.h": "c",
     "sdl_image.h": "c",
-    "stdbool.h": "c"
+    "stdbool.h": "c",
+    "player.h": "c",
+    "sdl_net.h": "c"
   }
 }
