--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 else()
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
+find_package(SDL2_net REQUIRED)
 endif()
 
 add_definitions(
@@ -45,15 +46,18 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   target_include_directories(CoronaRoyale PRIVATE
     deps/SDL2/include
     deps/SDL2_image/include
+    deps/SDL2_net/include
   )
   target_link_directories(CoronaRoyale PRIVATE
     deps/SDL2/lib/x64
     deps/SDL2_image/lib/x64
+    deps/SDL2_net/lib/x64
   )
   target_link_libraries(CoronaRoyale PRIVATE
     SDL2
     SDL2main
     SDL2_image
+    SDL2_net
   )
   configure_file("deps/SDL2/lib/x64/SDL2.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/SDL2.dll" COPYONLY)
   configure_file("deps/SDL2_image/lib/x64/SDL2_image.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/SDL2_image.dll" COPYONLY)
@@ -62,16 +66,19 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   configure_file("deps/SDL2_image/lib/x64/libpng16-16.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libpng16-16.dll" COPYONLY)
   configure_file("deps/SDL2_image/lib/x64/libtiff-5.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libtiff-5.dll" COPYONLY)
   configure_file("deps/SDL2_image/lib/x64/libwebp-7.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libwebp-7.dll" COPYONLY)
+  configure_file("deps/SDL2_net/lib/x64/SDL2_net.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/SDL2_net.dll" COPYONLY)
 else()
   # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17 -fms-extensions -fdelayed-template-parsing -fexceptions")
   
   target_include_directories(CoronaRoyale PRIVATE
     ${SDL2_INCLUDE_DIR}
     ${SDL2_IMAGE_INCLUDE_DIR}
+    ${SDL2_NET_INCLUDE_DIR}
   )
   target_link_libraries(CoronaRoyale PRIVATE
     ${SDL2_LIBRARY}
     ${SDL2_IMAGE_LIBRARIES}
+    ${SDL2_NET_LIBRARIES}
   )
 endif()
 
