--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
-
-######
-###### CLIENT
-######
 project(CoronaRoyale)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-  configure_file("deps/SDL2/lib/x64/SDL2.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/SDL2.dll" COPYONLY)
-  configure_file("deps/SDL2_image/lib/x64/SDL2_image.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/SDL2_image.dll" COPYONLY)
-  configure_file("deps/SDL2_image/lib/x64/zlib1.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/zlib1.dll" COPYONLY)
-  configure_file("deps/SDL2_image/lib/x64/libjpeg-9.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libjpeg-9.dll" COPYONLY)
-  configure_file("deps/SDL2_image/lib/x64/libpng16-16.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libpng16-16.dll" COPYONLY)
-  configure_file("deps/SDL2_image/lib/x64/libtiff-5.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libtiff-5.dll" COPYONLY)
-  configure_file("deps/SDL2_image/lib/x64/libwebp-7.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/libwebp-7.dll" COPYONLY)
-  configure_file("deps/SDL2_net/lib/x64/SDL2_net.dll" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/SDL2_net.dll" COPYONLY)
+  # Copy DLLs from SDL2 libraries into build output
+  file(GLOB SDL2_SHARED_BINARIES
+    "deps/SDL2*/lib/x64/*.dll"
+  )
+  file(COPY ${SDL2_SHARED_BINARIES} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
 else()
   find_package(SDL2 REQUIRED)
   find_package(SDL2_image REQUIRED)
+  find_package(SDL2_mixer REQUIRED)
   find_package(SDL2_net REQUIRED)
 endif()
 
@@ -27,7 +21,9 @@ add_definitions(
   -DUNICODE
 )
 
-# Server
+######
+###### CLIENT
+######
 add_executable(CoronaRoyale
   src/client/main.c
   src/client/events.c
@@ -58,17 +54,20 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   target_include_directories(CoronaRoyale PRIVATE
     deps/SDL2/include
     deps/SDL2_image/include
+    deps/SDL2_mixer/include
     deps/SDL2_net/include
   )
   target_link_directories(CoronaRoyale PRIVATE
     deps/SDL2/lib/x64
     deps/SDL2_image/lib/x64
+    deps/SDL2_mixer/lib/x64
     deps/SDL2_net/lib/x64
   )
   target_link_libraries(CoronaRoyale PRIVATE
     SDL2
     SDL2main
     SDL2_image
+    SDL2_mixer
     SDL2_net
   )
 else()
@@ -77,11 +76,13 @@ else()
   target_include_directories(CoronaRoyale PRIVATE
     ${SDL2_INCLUDE_DIR}
     ${SDL2_IMAGE_INCLUDE_DIR}
+    ${SDL2_MIXER_INCLUDE_DIR}
     ${SDL2_NET_INCLUDE_DIR}
   )
   target_link_libraries(CoronaRoyale PRIVATE
     ${SDL2_LIBRARY}
     ${SDL2_IMAGE_LIBRARIES}
+    ${SDL2_MIXER_LIBRARIES}
     ${SDL2_NET_LIBRARIES}
   )
 endif()
@@ -91,22 +92,6 @@ endif()
 ######
 ###### SERVER
 ######
-project(CoronaRoyaleServer)
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
-
-if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-else()
-  find_package(SDL2 REQUIRED)
-  find_package(SDL2_image REQUIRED)
-  find_package(SDL2_net REQUIRED)
-endif()
-
-add_definitions(
-  -D_UNICODE
-  -DUNICODE
-)
-
 add_executable(CoronaRoyaleServer
   src/server/main.c
 )
