Added SDL2_TTF and SDL_FontCache

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "sdl_net.h": "c",
     "main.h": "c",
     "sdl_mixer.h": "c",
-    "events.h": "c"
+    "events.h": "c",
+    "sdl_fontcache.h": "c"
   }
 }
