--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,7 @@
         "miDebuggerPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/lldb-mi",
         "MIMode": "lldb",
         "program": "${workspaceFolder}/BUILD/macos/Debug/CoronaRoyale",
-        "cwd": "${workspaceFolder}/BUILD/macos/",
+        "cwd": "${workspaceFolder}/BUILD/macos/Debug",
       },
       "args": [],
       "stopAtEntry": false,
@@ -56,7 +56,7 @@
         "miDebuggerPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/lldb-mi",
         "MIMode": "lldb",
         "program": "${workspaceFolder}/BUILD/macos/Debug/CoronaRoyaleServer",
-        "cwd": "${workspaceFolder}/BUILD/macos/",
+        "cwd": "${workspaceFolder}/BUILD/macos/Debug",
       },
       "args": [],
       "stopAtEntry": false,
