TCP connection almost done.
Minor bugs when sending messages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,13 @@ add_executable(CoronaRoyale
   src/client/player.c
   src/client/events.c
   src/client/collision.c
+  
+  src/network.c
 
   deps/SDL_FontCache/SDL_FontCache.c
 )
 target_compile_definitions(CoronaRoyale PRIVATE
-
+  CR_CLIENT
 )
 target_include_directories(CoronaRoyale PRIVATE
   src
@@ -115,9 +117,12 @@ endif()
 ######
 add_executable(CoronaRoyaleServer
   src/server/main.c
+
+  src/network.c
 )
 target_compile_definitions(CoronaRoyaleServer PRIVATE
-
+  CR_SERVER
+  WITHOUT_SDL
 )
 target_include_directories(CoronaRoyaleServer PRIVATE
   src
@@ -141,19 +146,15 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     deps/SDL2_net/lib/x64
   )
   target_link_libraries(CoronaRoyaleServer PRIVATE
-    SDL2
-    SDL2main
     SDL2_net
   )
 else()
   # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++17 -fms-extensions -fdelayed-template-parsing -fexceptions")
   
   target_include_directories(CoronaRoyaleServer PRIVATE
-    ${SDL2_INCLUDE_DIR}
     ${SDL2_NET_INCLUDE_DIR}
   )
   target_link_libraries(CoronaRoyaleServer PRIVATE
-    ${SDL2_LIBRARY}
     ${SDL2_NET_LIBRARIES}
   )
 endif()
