Fix texture loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,17 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     "deps/SDL2*/lib/x64/*.dll"
   )
   file(COPY ${SDL2_SHARED_BINARIES} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
+  # Copy resources into build output
+  file(COPY "res" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
 else()
   find_package(SDL2 REQUIRED)
   find_package(SDL2_image REQUIRED)
   find_package(SDL2_mixer REQUIRED)
   find_package(SDL2_net REQUIRED)
   find_package(SDL2_ttf REQUIRED)
+
+  # Copy resources into build output
+  file(COPY "res" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 endif()
 
 add_definitions(
@@ -22,13 +27,12 @@ add_definitions(
   -DUNICODE
 )
 
-# Copy resources into build output
-file(COPY "res" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}")
-
 ######
 ###### CLIENT
 ######
-add_executable(CoronaRoyale
+# Get a list of all of the files in the data-folder
+file(GLOB_RECURSE CR_CLIENT_RESOURCES "${CMAKE_SOURCE_DIR}/res/*")
+set(CR_CLIENT_SOURCES
   src/client/main.c
   src/client/game.c
   src/client/audio.c
@@ -39,6 +43,8 @@ add_executable(CoronaRoyale
 
   deps/SDL_FontCache/SDL_FontCache.c
 )
+add_executable(CoronaRoyale ${CR_CLIENT_SOURCES})
+
 target_compile_definitions(CoronaRoyale PRIVATE
 
 )
