--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,14 +40,14 @@
         "miDebuggerPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/lldb-mi",
         "MIMode": "lldb",
         "program": "${workspaceFolder}/BUILD/macos/CoronaRoyale",
-        "cwd": "${workspaceFolder}/BUILD/macos/",
+        "cwd": "${workspaceFolder}",
       },
       "args": [],
       "stopAtEntry": false,
       "environment": [],
-      "externalConsole": false,
+      "externalConsole": true,
       "preLaunchTask": "Build"
-    }
+    },
     {
       "name": "(macOS) Run Server",
       "request": "launch",
