--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "main.h": "c",
     "sdl_mixer.h": "c",
     "events.h": "c",
-    "sdl_fontcache.h": "c"
+    "sdl_fontcache.h": "c",
+    "unistd.h": "c",
+    "stdlib.h": "c"
   }
 }
