implemented fonts function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(CR_CLIENT_SOURCES
   src/client/mouse.c
   src/client/timer.c
   src/client/texture.c
+  src/client/fonts.c
 
   deps/SDL_FontCache/SDL_FontCache.c
 )
