Infected can infect, refactored events, server acknowledges map dimensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,8 @@
     "stdlib.h": "c",
     "*.rh": "c",
     "windows.h": "c",
-    "network.h": "c"
+    "network.h": "c",
+    "netevent.h": "c"
   },
   "editor.tabSize": 4
 }
