--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,11 @@
     "*.rh": "c",
     "windows.h": "c",
     "network.h": "c",
-    "netevent.h": "c"
+    "netevent.h": "c",
+    "game.h": "c",
+    "xiosbase": "c",
+    "xlocale": "c",
+    "xlocnum": "c"
   },
   "editor.tabSize": 4
 }
